# telegram-news-aggregator

./: .env.example  .gitignore  Dockerfile  PROJECT_NOTES.md  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  sitecustomize.py
.github/workflows/: ci.yml  publish-chat-cards.yml  python-test.yml  render-keepalive.yml  scheduled_refresh.yml  telegram-news-cache.yml  telegram-news.yml
adapters/: kakao_openchat_bot.js  messengerbotr_debug_compat.js  messengerbotr_debug_echo.js  messengerbotr_runtime_probe.js
config/: channels.example.yaml  channels.yaml
docs/: app_briefing_make_pipeline.md  chat_cards_auto_publish.md  kakao_openchat_bot.md  profile_persistence_and_commands.md
reports/: app_recommendations.json  latest_report.json  latest_report.md
scripts/: .github_actions_test_trigger  export_string_session.py  init_db.py  list_bot_chats.py  make_telegram_string_session.py  manual_trigger_20260531_telegram_test.txt  publish_chat_cards.py  run_api.py  run_api_v7.py  run_once.py
src/telegram_news/: __init__.py  adaptive_strategy.py  advice_variants.py  api_extended.py  api_extended_fixed.py  api_extended_v5.py  api_server.py  app.py  bot_services.py  bot_services_fixed.py  bot_services_private.py  bot_services_v2.py  bot_services_v3.py  report.py  (+37 more)
tests/: test_adaptive_strategy.py  test_extractor.py  test_kakao_notifier.py  test_market_context.py  test_market_outlook.py  test_normalizer.py  test_report_v2.py  test_strict_quality.py  test_summarizer_gemini.py  test_telegram_dispatch.py  test_telegram_webhook.py  test_unified_pipeline.py
