[project]
name = "telegram-news-aggregator"
version = "0.1.0"
description = "Telegram channel news collector and summarizer"
requires-python = ">=3.10"
dependencies = [
  "telethon>=1.36.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.1",
  "requests>=2.32.3",
  "openai>=1.40.0",
  "rapidfuzz>=3.9.6"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
